[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = decamtools
description = Tools for analyzing data taken with DECam
long_description = This is a python package to assist observers who are reducing DECam data
author = Fred Moolekamp
author_email = fred.moolekamp@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = fred3m/decam-tools